--- a/.github/workflows/backup/cleanClosedPR.yml
+++ b/.github/workflows/backup/cleanClosedPR.yml
@@ -64,7 +64,7 @@ jobs:
       # Clean the reamaining build/deployment artifacts
       - name: Clean remaining Artifacts
         run: |
-          oc project xx9999-dev
+          oc project a0ec71-dev
           oc get all,pvc,secret,pods,ReplicationController,DeploymentConfig,HorizontalPodAutoscaler,imagestreamtag -o name | grep biohubbc | grep $BUILD_ID | awk '{print "oc delete " $1}' | bash
-          oc project xx9999-tools
+          oc project a0ec71-tools
           oc get all,pvc,secret,pods,ReplicationController,DeploymentConfig,HorizontalPodAutoscaler,imagestreamtag -o name | grep biohubbc | grep $BUILD_ID | awk '{print "oc delete " $1}' | bash
