--- a/.github/workflows/backup/deployStatic.yml
+++ b/.github/workflows/backup/deployStatic.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Scale down
         run: |
-          oc project xx9999-dev
+          oc project a0ec71-dev
           oc get deploymentconfig --selector env-id=$BUILD_ID -o name | awk '{print "oc scale --replicas=0  " $1}' | bash
 
   # Build the Database image
@@ -511,9 +511,9 @@ jobs:
       # Clean the reamaining build/deployment artifacts
       - name: Clean remaining Artifacts
         run: |
-          oc project xx9999-dev
+          oc project a0ec71-dev
           oc get all,pvc,secret,pods,ReplicationController,DeploymentConfig,HorizontalPodAutoscaler,imagestreamtag -o name | grep biohubbc | grep $BUILD_ID | awk '{print "oc delete " $1}' | bash
-          oc project xx9999-tools
+          oc project a0ec71-tools
           oc get all,pvc,secret,pods,ReplicationController,DeploymentConfig,HorizontalPodAutoscaler,imagestreamtag -o name | grep biohubbc | grep $BUILD_ID | awk '{print "oc delete " $1}' | bash
 
   cycleschemaspy:
@@ -534,7 +534,7 @@ jobs:
 
       - name: Scale down
         run: |
-          oc project xx9999-dev
+          oc project a0ec71-dev
           oc scale --replicas=0 dc schemaspy
           oc scale --replicas=1 dc schemaspy
 
