--- a/Containers/backup/templates/backup/backup-deploy.yaml
+++ b/Containers/backup/templates/backup/backup-deploy.yaml
@@ -265,12 +265,12 @@ parameters:
     displayName: Namespace Name
     description: The name of the namespace being deployed to..
     required: true
-    value: xx9999-dev
+    value: a0ec71-dev
   - name: IMAGE_NAMESPACE
     displayName: Image Namespace
     description: The namespace of the OpenShift project containing the imagestream for the application.
     required: true
-    value: xx9999-tools
+    value: a0ec71-tools
   - name: TAG_NAME
     displayName: Environment TAG name
     description: The TAG name for this environment, e.g., dev, test, prod
