--- a/Containers/workflow/openshift/n8n.dc.yaml
+++ b/Containers/workflow/openshift/n8n.dc.yaml
@@ -514,12 +514,12 @@ parameters:
     description: Target namespace reference (i.e. '9f0fbe-dev')
     displayName: Namespace
     required: true
-    value: xx9999-test
+    value: a0ec71-test
   - name: N8N_IMAGE_NAMESPACE
     description: Target namespace reference (i.e. '9f0fbe-dev') for the N8N image
     displayName: Namespace
     required: true
-    value: xx9999-tools
+    value: a0ec71-tools
   - name: CPU_REQUEST
     description: Minimal CPU needed to run
     displayName: CPU Request
