--- a/database/openshift/db.bc.yaml
+++ b/database/openshift/db.bc.yaml
@@ -31,7 +31,7 @@ objects:
           from:
             kind: ImageStreamTag
             name: postgis-postgres:12-31
-            namespace: xx9999-tools
+            namespace: a0ec71-tools
           generation: 1
           importPolicy: {}
           referencePolicy:
