--- a/database/openshift/db.dc.yaml
+++ b/database/openshift/db.dc.yaml
@@ -18,7 +18,7 @@ parameters:
   - description: The OpenShift Namespace where the ImageStream resides.
     displayName: Namespace
     name: IMAGE_STREAM_NAMESPACE
-    value: 'xx9999-tools'
+    value: 'a0ec71-tools'
   - description: The name of the OpenShift Service exposed for the database.
     displayName: Database Service Name
     name: DATABASE_SERVICE_NAME
