--- a/Containers/postgres12-postgis31/rhel7.rh-postgresql12/Dockerfile
+++ b/Containers/postgres12-postgis31/rhel7.rh-postgresql12/Dockerfile
@@ -18,10 +18,10 @@ ENV POSTGIS_EXTENSION=N \
     PGUSER=postgres \
     LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 \
     APP_DATA=/opt/app-root
-    
+
 ENV POSTGISV 3
 ENV TZ America/Vancouver
-ENV PORT 5432 
+ENV PORT 5432
 
 ENV SUMMARY="PostgreSQL is an advanced Object-Relational database management system" \
     DESCRIPTION="PostgreSQL is an advanced Object-Relational database management system (DBMS). \
@@ -60,8 +60,7 @@ COPY ./rhsm-ca /etc/rhsm/ca
 # This is a workaround for https://bugzilla.redhat.com/show_bug.cgi?id=1479388
 # Initialize /etc/yum.repos.d/redhat.repo
 # See https://access.redhat.com/solutions/1443553
-RUN rm /etc/rhsm-host && \
-    yum repolist > /dev/null && \
+RUN yum repolist > /dev/null && \
     yum install -y yum-utils gettext && \
     yum-config-manager --disable \* &> /dev/null && \
     yum-config-manager --enable rhel-server-rhscl-7-rpms && \
@@ -79,7 +78,7 @@ RUN rm /etc/rhsm-host && \
     /usr/libexec/fix-permissions /var/lib/pgsql /var/run/postgresql
 
 RUN touch /etc/yum/pluginconf.d/rhnplugin.conf && \
-    echo  exclude=postgresql* >> /etc/yum/pluginconf.d/rhnplugin.conf    
+    echo  exclude=postgresql* >> /etc/yum/pluginconf.d/rhnplugin.conf
 
 RUN bash /usr/libexec/fix-permissions /var/run/postgresql
 
@@ -107,16 +106,10 @@ RUN cd /tmp && \
 
 RUN yum install -y postgis31_12 postgis31_12-client pgrouting_12
 
-RUN /usr/bin/install -c -m 755  /usr/pgsql-12/lib/postgis* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \
-    /usr/bin/install -c -m 755  /usr/pgsql-12/lib/libpgrouting* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \
-    /usr/bin/install -c -m 755  /usr/pgsql-12/lib/pgcrypto* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \
-    /usr/bin/install -c -m 755  /usr/pgsql-12/lib/fuzzystrmatch* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \    
-    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/postgis* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
-    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/pgrouting* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
-    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/pgcrypto* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
-    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/fuzzystrmatch* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
-    mv /usr/pgsql-12/share/contrib/postgis-3.1/ /opt/rh/rh-postgresql12/root/usr/share/pgsql/contrib/ 
-   
+RUN /usr/bin/install -c -m 755  /usr/pgsql-12/lib/* '/opt/rh/rh-postgresql12/root/usr/lib64/pgsql/' && \
+    /usr/bin/install -c -m 644 /usr/pgsql-12/share/extension/* '/opt/rh/rh-postgresql12/root/usr/share/pgsql/extension/' && \
+    mv /usr/pgsql-12/share/contrib/postgis-3.1/ /opt/rh/rh-postgresql12/root/usr/share/pgsql/contrib/
+
 RUN rm -rf /tmp/pgdg-redhat-repo-latest.noarch.rpm /var/cache/yum
 
 # Remove entitlements and Subscription Manager configs
