--- a/app/openshift/app.bc.json
+++ b/app/openshift/app.bc.json
@@ -36,7 +36,7 @@
         {
           "name": "SOURCE_REPOSITORY_URL",
           "required": true,
-          "value": "https://github.com/bcgov/biohubbc"
+          "value": "https://github.com/bcgov/biohubbc-platform.git"
         },
         {
           "name": "SOURCE_REPOSITORY_REF",
