--- a/database/package.json
+++ b/database/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bcgov/biohubbc.git"
+    "url": "https://github.com/bcgov/biohubbc-platform.git"
   },
   "engines": {
     "node": ">= 14.0.0",
