--- a/Containers/postgres12-postgis31/openshift/postgresql12-postgis31-oracle-fdw.bc.yaml
+++ b/Containers/postgres12-postgis31/openshift/postgresql12-postgis31-oracle-fdw.bc.yaml
@@ -90,7 +90,7 @@ parameters:
     displayName: Git Repo URL
     description: The URL to your GIT repo.
     required: true
-    value: https://github.com/bcgov/biohubbc.git
+    value: https://github.com/bcgov/biohubbc-platform.git
   - name: GIT_REF
     displayName: Git Reference
     description: The git reference or branch.
