--- a/n8n/package.json
+++ b/n8n/package.json
@@ -5,7 +5,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bcgov/biohubbc.git"
+    "url": "https://github.com/bcgov/biohubbc-platform.git"
   },
   "engines": {
     "node": ">= 14.15.0",
@@ -27,7 +27,7 @@
     "@types/node": "~14.14.31",
     "@types/pg": "~7.14.4",
     "npm-run-all": "~4.1.5",
-    "n8n": "0.144.0",
+    "n8n": "~0.171.0",
     "ts-node": "~10.4.0"
   }
 }
