--- a/.config/config.json
+++ b/.config/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "biohubbc-platform-platform",
+  "name": "biohubbc-platform",
   "namespaceSuffix": "xx9999",
   "namespace": {
     "tools": "tools",
