--- a/platform/networking/networkpolicies/app-to-api-to-db.yaml
+++ b/platform/networking/networkpolicies/app-to-api-to-db.yaml
@@ -124,3 +124,60 @@ objects:
           role: api
       policyTypes:
         - Ingress
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
+      name: setup-to-db
+      namespace: "${NAMESPACE}-dev"
+    spec:
+      podSelector:
+        matchLabels:
+          role: db
+      ingress:
+        - ports:
+            - protocol: TCP
+              port: 5432
+          from:
+            - podSelector:
+                matchLabels:
+                  role: setup
+      policyTypes:
+        - Ingress
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
+      name: setup-to-db
+      namespace: "${NAMESPACE}-test"
+    spec:
+      podSelector:
+        matchLabels:
+          role: db
+      ingress:
+        - ports:
+            - protocol: TCP
+              port: 5432
+          from:
+            - podSelector:
+                matchLabels:
+                  role: setup
+      policyTypes:
+        - Ingress
+  - apiVersion: networking.k8s.io/v1
+    kind: NetworkPolicy
+    metadata:
+      name: setup-to-db
+      namespace: "${NAMESPACE}-prod"
+    spec:
+      podSelector:
+        matchLabels:
+          role: db
+      ingress:
+        - ports:
+            - protocol: TCP
+              port: 5432
+          from:
+            - podSelector:
+                matchLabels:
+                  role: setup
+      policyTypes:
+        - Ingress
