--- a/.github/workflows/backup/deployStatic.yml
+++ b/.github/workflows/backup/deployStatic.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Build Database Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
+          npm ci --only=production
           DEBUG=* npm run db:build -- --pr=$BUILD_ID --branch=$BRANCH --type=static
 
   # Build the Database Setup image
@@ -140,8 +140,7 @@ jobs:
       - name: Build Database Setup Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run db-setup:build -- --pr=$BUILD_ID --branch=$BRANCH --type=static
 
   # Build the API image
@@ -187,8 +186,7 @@ jobs:
       - name: Build API Image
         working-directory: "./api/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run build -- --pr=$BUILD_ID --branch=$BRANCH --type=static
 
   # Build the web frontend app
@@ -236,8 +234,7 @@ jobs:
       - name: Build APP Image
         working-directory: "./app/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run build -- --pr=$BUILD_ID --branch=$BRANCH --type=static
 
   # Deploy Database image
@@ -285,8 +282,7 @@ jobs:
       - name: Deploy Database Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run db:deploy -- --pr=$BUILD_ID --env=$BRANCH --branch=$BRANCH --type=static
 
   # Deploy Database image
@@ -335,8 +331,7 @@ jobs:
       - name: Deploy Database Setup Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run db-setup:deploy -- --pr=$BUILD_ID --env=$BRANCH --branch=$BRANCH --type=static
 
   # Deploy API image
@@ -385,8 +380,7 @@ jobs:
       - name: Deploy API Image
         working-directory: "./api/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=$BRANCH --branch=$BRANCH --type=static
 
   # Deploy App image
@@ -434,8 +428,7 @@ jobs:
       - name: Deploy App Image
         working-directory: "./app/.pipeline"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=$BRANCH --branch=$BRANCH --type=static
 
   # Clean build/deployment artifacts
@@ -485,8 +478,7 @@ jobs:
       - name: Clean Database Artifacts
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run clean -- --pr=$BUILD_ID --env=build
           DEBUG=* npm run clean -- --pr=$BUILD_ID --env=dev
 
@@ -494,8 +486,7 @@ jobs:
       - name: Clean API Artifacts
         working-directory: "./api/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run clean -- --pr=$BUILD_ID --env=build
           DEBUG=* npm run clean -- --pr=$BUILD_ID --env=dev
 
@@ -503,8 +494,7 @@ jobs:
       - name: Clean APP Artifacts
         working-directory: "./app/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run clean -- --pr=$BUILD_ID --env=build
           DEBUG=* npm run clean -- --pr=$BUILD_ID --env=dev
 
