--- a/.github/workflows/backup/deploy.yml
+++ b/.github/workflows/backup/deploy.yml
@@ -87,8 +87,7 @@ jobs:
       - name: Build Database Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run db:build -- --pr=$BUILD_ID
 
   # Build the Database Setup image
@@ -135,8 +134,7 @@ jobs:
       - name: Build Database Setup Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run db-setup:build -- --pr=$BUILD_ID
 
   # Build the API image
@@ -183,8 +181,7 @@ jobs:
       - name: Build API Image
         working-directory: "./api/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run build -- --pr=$BUILD_ID
 
   # Build the web frontend app image
@@ -231,8 +228,7 @@ jobs:
       - name: Build APP Image
         working-directory: "./app/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run build -- --pr=$BUILD_ID
 
   # Deploy Database image
@@ -280,7 +276,7 @@ jobs:
       - name: Deploy Database Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
+          npm ci --only=production
           DEBUG=* npm run db:deploy -- --pr=$BUILD_ID --env=dev
 
   # Deploy Database image
@@ -329,8 +325,7 @@ jobs:
       - name: Deploy Database Setup Image
         working-directory: "./database/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run db-setup:deploy -- --pr=$BUILD_ID --env=dev
 
   # Deploy API image
@@ -379,8 +374,7 @@ jobs:
       - name: Deploy API Image
         working-directory: "./api/.pipeline/"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=dev
 
   # Deploy App image
@@ -428,8 +422,7 @@ jobs:
       - name: Deploy App Image
         working-directory: "./app/.pipeline"
         run: |
-          npm install
-          # npm ci
+          npm ci --only=production
           DEBUG=* npm run deploy -- --pr=$BUILD_ID --env=dev
 
   cypress-run:
