--- a/api/package.json
+++ b/api/package.json
@@ -29,69 +29,71 @@
   },
   "dependencies": {
     "@elastic/elasticsearch": "~8.1.0",
-    "adm-zip": "~0.5.5",
-    "ajv": "~8.6.3",
-    "aws-sdk": "~2.742.0",
-    "axios": "~0.21.4",
+    "adm-zip": "~0.5.9",
+    "ajv": "~8.11.0",
+    "aws-sdk": "~2.1125.0",
+    "axios": "~0.27.2",
     "clamdjs": "~1.0.2",
-    "db-migrate": "~0.11.11",
+    "db-migrate": "~0.11.13",
     "db-migrate-pg": "~1.2.2",
-    "express": "~4.17.1",
-    "express-openapi": "~9.3.0",
+    "express": "~4.18.1",
+    "express-openapi": "~11.0.0",
     "jsonpath": "~1.1.1",
     "jsonwebtoken": "~8.5.1",
-    "jwks-rsa": "~2.0.5",
-    "knex": "~1.0.2",
+    "jwks-rsa": "~2.1.0",
+    "knex": "~2.0.0",
     "lodash": "~4.17.21",
-    "mime": "~2.5.2",
-    "moment": "~2.29.2",
-    "multer": "~1.4.3",
-    "pg": "~8.7.1",
-    "qs": "~6.10.1",
+    "luxon": "~2.3.2",
+    "mime": "~3.0.0",
+    "multer": "~1.4.4",
+    "pg": "~8.7.3",
+    "qs": "~6.10.3",
     "sql-template-strings": "~2.2.2",
     "swagger-ui-express": "~4.3.0",
     "typescript": "~4.1.6",
     "uuid": "~8.3.2",
-    "winston": "~3.3.3",
-    "xlsx": "~0.17.0"
+    "winston": "~3.7.2",
+    "xlsx": "~0.18.5"
   },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "~1.0.1",
-    "@types/adm-zip": "~0.4.34",
-    "@types/chai": "~4.2.22",
+    "@istanbuljs/nyc-config-typescript": "~1.0.2",
+    "@types/adm-zip": "~0.5.0",
+    "@types/chai": "~4.3.1",
     "@types/express": "~4.17.13",
     "@types/geojson": "~7946.0.8",
     "@types/gulp": "~4.0.9",
     "@types/jsonpath": "~0.2.0",
-    "@types/jsonwebtoken": "~8.5.5",
-    "@types/lodash": "~4.14.176",
+    "@types/jsonwebtoken": "~8.5.8",
+    "@types/lodash": "~4.14.182",
+    "@types/luxon": "~2.3.2",
     "@types/mime": "~2.0.3",
-    "@types/mocha": "~9.0.0",
+    "@types/mocha": "~9.1.1",
     "@types/multer": "~1.4.7",
     "@types/node": "~14.14.31",
-    "@types/pg": "~8.6.1",
-    "@types/sinon": "~10.0.4",
-    "@types/sinon-chai": "~3.2.5",
+    "@types/pg": "~8.6.5",
+    "@types/sinon": "~10.0.11",
+    "@types/sinon-chai": "~3.2.8",
     "@types/swagger-ui-express": "~4.1.3",
-    "@types/uuid": "~8.3.1",
+    "@types/uuid": "~8.3.4",
     "@types/yamljs": "~0.2.31",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
-    "chai": "~4.3.4",
+    "chai": "~4.3.6",
     "del": "~6.0.0",
     "eslint": "~7.32.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-prettier": "~3.3.1",
     "gulp": "~4.0.2",
     "gulp-typescript": "~5.0.1",
-    "mocha": "~8.4.0",
-    "nodemon": "~2.0.14",
+    "mocha": "~9.2.2",
+    "nodemon": "~2.0.16",
     "npm-run-all": "~4.1.5",
     "nyc": "~15.1.0",
     "prettier": "~2.2.1",
-    "sinon": "~11.1.2",
+    "prettier-plugin-organize-imports": "~2.3.4",
+    "sinon": "~13.0.2",
     "sinon-chai": "~3.7.0",
-    "ts-mocha": "~8.0.0",
-    "ts-node": "~10.4.0"
+    "ts-mocha": "~9.0.2",
+    "ts-node": "~10.7.0"
   }
 }
