--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "preinstall": "npx force-resolutions --unsafe-perm",
     "deploy_start": "node server",
     "test": "react-scripts test --env=jsdom-fourteen --ci --watchAll=false --runInBand",
     "test:watch": "react-scripts test --env=jsdom-fourteen",
@@ -50,7 +51,7 @@
     "leaflet-fullscreen": "~1.0.2",
     "leaflet.locatecontrol": "~0.76.0",
     "lodash-es": "~4.17.21",
-    "moment": "~2.29.2",
+    "luxon": "~2.3.2",
     "node-sass": "~4.14.1",
     "qs": "~6.9.4",
     "react": "~16.14.0",
@@ -79,11 +80,12 @@
     "@types/leaflet-draw": "~1.0.5",
     "@types/leaflet-fullscreen": "~1.0.6",
     "@types/lodash-es": "~4.17.4",
+    "@types/luxon": "~2.3.2",
     "@types/node": "~14.14.31",
     "@types/node-sass": "~4.11.2",
     "@types/qs": "~6.9.5",
-    "@types/react": "~16.9.17",
-    "@types/react-dom": "~16.9.4",
+    "@types/react": "~16.9.56",
+    "@types/react-dom": "~16.9.8",
     "@types/react-leaflet": "~2.8.2",
     "@types/react-router": "~5.1.4",
     "@types/react-router-dom": "~5.1.3",
@@ -99,7 +101,11 @@
     "jest": "~24.9.0",
     "jest-sonar-reporter": "~2.0.0",
     "prettier": "~2.2.1",
+    "prettier-plugin-organize-imports": "~2.3.4",
     "react-scripts": "~3.4.4"
+  },
+  "resolutions": {
+    "@types/react": "17.0.44"
   },
   "browserslist": {
     "production": [
