--- a/database/package.json
+++ b/database/package.json
@@ -22,12 +22,12 @@
     "format-fix": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss}\""
   },
   "dependencies": {
-    "@types/csv-parse": "^1.2.2",
-    "knex": "~1.0.1",
-    "pg": "~8.3.0",
+    "knex": "~2.0.0",
+    "pg": "~8.7.3",
     "typescript": "~4.1.6"
   },
   "devDependencies": {
+    "@types/csv-parse": "~1.2.2",
     "@types/node": "~14.14.31",
     "@types/pg": "~7.14.4",
     "@typescript-eslint/eslint-plugin": "~4.33.0",
@@ -37,6 +37,7 @@
     "eslint-plugin-prettier": "~3.3.1",
     "npm-run-all": "~4.1.5",
     "prettier": "^2.3.2",
+    "prettier-plugin-organize-imports": "~2.3.4",
     "ts-node": "~10.4.0"
   }
 }
