--- a/database/openshift/db.dc.yaml
+++ b/database/openshift/db.dc.yaml
@@ -219,9 +219,21 @@ objects:
                     - '/bin/sh'
                     - '-i'
                     - '-c'
-                    - pg_isready -h 127.0.0.1 -q
+                    - pg_isready -h 127.0.0.1 -q -t10
                 initialDelaySeconds: 5
                 timeoutSeconds: 1
+              startupProbe:
+                exec:
+                  command:
+                    - /bin/sh
+                    - '-i'
+                    - '-c'
+                    - pg_isready -h 127.0.0.1 -q -t 10
+                initialDelaySeconds: 10
+                timeoutSeconds: 3
+                periodSeconds: 15
+                successThreshold: 1
+                failureThreshold: 10
               resources:
                 requests:
                   cpu: '${CPU_REQUEST}'
