--- a/api/package.json
+++ b/api/package.json
@@ -78,6 +78,7 @@
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
     "chai": "~4.3.4",
+    "chai-openapi-response-validator": "^0.14.2",
     "del": "~6.0.0",
     "eslint": "~7.32.0",
     "eslint-config-prettier": "~6.15.0",
