--- a/api/package.json
+++ b/api/package.json
@@ -46,6 +46,7 @@
     "mime": "~2.5.2",
     "moment": "~2.29.2",
     "multer": "~1.4.3",
+    "openapi-data-validator": "^2.0.44",
     "pg": "~8.7.1",
     "qs": "~6.10.1",
     "sql-template-strings": "~2.2.2",
@@ -78,7 +79,6 @@
     "@typescript-eslint/eslint-plugin": "~4.33.0",
     "@typescript-eslint/parser": "~4.33.0",
     "chai": "~4.3.4",
-    "chai-openapi-response-validator": "^0.14.2",
     "del": "~6.0.0",
     "eslint": "~7.32.0",
     "eslint-config-prettier": "~6.15.0",
