--- a/api/package.json
+++ b/api/package.json
@@ -47,6 +47,7 @@
     "moment": "~2.29.2",
     "multer": "~1.4.3",
     "openapi-request-validator": "^11.0.0",
+    "openapi-response-validator": "^11.0.0",
     "pg": "~8.7.1",
     "qs": "~6.10.1",
     "sql-template-strings": "~2.2.2",
