--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U $DB_ADMIN -p 5432 -d $DB_DATABASE"]
       interval: 5s
-      retries: 20
+      timeout: 5s
+      retries: 30
     environment:
       - NODE_ENV=${NODE_ENV}
       - POSTGRES_USER=${DB_ADMIN}
@@ -40,6 +41,7 @@ services:
       - ${API_PORT}:${API_PORT}
     environment:
       - NODE_ENV=${NODE_ENV}
+      - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
       - TZ=${API_TZ}
       - API_HOST=${API_HOST}
       - API_PORT=${API_PORT}
@@ -213,9 +215,6 @@ services:
       - REACT_APP_SITEMINDER_LOGOUT_URL=${SITEMINDER_LOGOUT_URL}
       - REACT_APP_N8N_HOST=${N8N_HOST}
       - REACT_APP_N8N_PORT=${N8N_PROXY_PORT}
-      - REACT_APP_KEYCLOAK_HOST=${KEYCLOAK_HOST}
-      - REACT_APP_KEYCLOAK_REALM=${KEYCLOAK_REALM}
-      - REACT_APP_KEYCLOAK_CLIENT_ID=${KEYCLOAK_CLIENT_ID}
     volumes:
       - ./app:/opt/app-root/src
       - /opt/app-root/src/node_modules # prevents local node_modules overriding container node_modules
@@ -274,7 +273,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: ["npm", "run", "migrate-latest"]
+    command: ["npm", "run", "migrate:latest"]
 
   ## Rollback the latest database migrations
   db_rollback:
@@ -301,7 +300,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    command: ["npm", "run", "migrate-rollback"]
+    command: ["npm", "run", "migrate:rollback"]
 
 networks:
   local-network:
